== 0.3.0 / 2008-11-07

* Major enhancements

  * Added Merb support (Gwyn Morfey, Jeremy Burks, Rob Kaufman, Yehuda Katz)
  * Added experimental Selenium support (Luke Melia)
  * Add have_selector, have_xpath, have_tag and contain matchers from Merb
  * Switch from Hpricot to Nokogiri for XML parsing (thanks, Aaron Patterson)
  
* Minor enhancements

  * Added #within for manipulating the current page within a selector scope
  * Add support for file fields via #attaches_file method (Rails only at the moment) (Kyle Hargraves)
  * Add support for simulating SSL requests (Luke Melia)
  * Added #basic_auth(user, pass) to support HTTP Basic Auth (Aslak Hellesøy)
  * Added support for Sinatra and Rack (Aslak Hellesøy)
  * Rename visits to visit, fills_in to fill_in, etc.
  * Add #field_labeled for looking up form fields by label (David Chelimsky)
  * Add #field_named and #field_with_id locators
  * Don't depend on hoe anymore
  * Return responses after sending requests
  * Allow clicking links and buttons by a regular expression in Selenium (Luke Melia)
  * Allow clicking links by a regular expression
  * Add #http_accept for including MIME type HTTP "Accept" headers (Ryan Briones)
  * Add #header to support inclusion of custom HTTP headers (Ryan Briones)
  * Consider response codes 200-499 as successful enough to not raise a Webrat error (David Leal)
  * Add Webrat.root method for cross-framework support (Krzysztof Zylawy)
  * Add support for clicking areas of an image map (Alex Lang)
  * Support relative links, including href="?foo=bar" (Kyle Hargraves)
  * Separated Rails-specific code from the Webrat core to make it easier to use Webrat with other environments
  * Alias visits as visit, clicks_link as click_link, etc. for better readability
  * Raise error when trying to interact with a disabled form element (Luke Melia)
  * Don't send disabled form elements to the server (Nicholas A. Evans)
  * Display response body when the page load is not successful (David Leal)